# TradingAgents

./: .env.example  .gitignore  OPTIMAL_PROJECT_STRUCTURE.md  README.md  README_ENHANCED.md  README_ENHANCED_COMPLETE.md  database_writer.py  pyproject.toml  requirements.txt  stock_list.json
.github/: GITHUB_ACTIONS_GUIDE.md
.github/workflows/: ci.yml  code-quality.yml  security.yml  test-suite.yml
cli/: utils.py
configs/: default.json  stock_lists.json
deployment/docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
docs/: README.md
docs/examples/: basic_usage.py
docs/fixes/: latest_fixes.md  memory_fixes.md
docs/guides/: multi_stock_guide.md  project_structure.md  quickstart.md  third_party_practices.md
enhanced/: README.md
extensions/: __init__.py
extensions/api/: main.py
extensions/multi_stock/: analyzer.py
extensions/utils/: memory_cleanup.py
scripts/: run_analysis.py
tests/: test_fixes.py  test_quick.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: memory.py
tradingagents/dataflows/: deepseek_fundamentals.py  googlenews_utils.py  interface.py  stockstats_utils.py
tradingagents/graph/: reflection.py  trading_graph.py
